2008-10-26  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-devel-docs branched for GNOME 2.24.

2008-10-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: balsa documentation is now g-d-u compliant.
	Fixes #554924.
	* releases.xml.in: abiword is not in gnome-modules.xml.

2008-10-24  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added integration-guide to gnome-deve-docs.
	* people.xml.in: Added Asturian coordinator.
	* translation-teams.xml.in: Added Asturian team.

2008-10-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gconf branched for GNOME 2.24.

2008-10-21  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	vino branched for GNOME 2.24.

2008-10-21  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Added tasque to gnome-extras.

2008-10-21  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	evince branched for GNOME 2.24.

2008-10-21  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added correct branch for packagekit.

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gnome-utils branched for GNOME 2.24.

2008-10-20  Jordi Mallach  <jordi@sindominio.net>

	* translation-teams.xml.in: rename Valencian-Catalan to
	Valencian (Southern Catalan).

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	libgnome branched for GNOME 2.24.

2008-10-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	Added Ross and Thomas as maintainers.
	* people.xml.in:
	Added Ross and Thomas.

2008-10-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* people.xml.in:
	Added ~10 maintainers :)

2008-10-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	at-spi, atk and gnome-icon-theme has been branched for GNOME 2.24.
