@@ -708,7 +708,7 @@
       <module id="bug-buddy" branch="gnome-2-24"/>
       <module id="cheese" branch="gnome-2-24"/>
       <module id="dasher"/>
-      <module id="deskbar-applet"/>
+      <module id="deskbar-applet" branch="gnome-2-24"/>
       <module id="eel" branch="gnome-2-24"/>
       <module id="ekiga" branch="gnome-2-24"/>
       <module id="empathy" branch="gnome-2-24"/>
